crates/sui-prover/tests/snapshots/issue-222.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
   ┌─ /Users/runner/.move/https___github_com_asymptotic-code_sui_git_next/crates/sui-framework/packages/sui-framework/sources/versioned.move:52:5
   │
52 │     dynamic_field::borrow_mut(&mut self.id, self.version)
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/issue-222.move:29: foo_spec
